--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.2.2",
         "date-fns": "^2.29.3",
+        "jsdoc": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.7.1",
@@ -19,7 +20,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "docs": "jsdoc -c jsdoc.conf.json"
     },
     "eslintConfig": {
         "extends": [
